Not yet opened classes have different color

--- a/src/stylesheets/main.sass
+++ b/src/stylesheets/main.sass
@@ -1,5 +1,9 @@
-.lecture
-  background: indianred
+.schedule
+	.lecture
+  		background: indianred
 
-.class
-  background: lightgreen
+	.class
+  		background: lightgreen
+
+	.empty
+  		background: gray
