Schedule header is fixed

--- a/src/stylesheets/main.sass
+++ b/src/stylesheets/main.sass
@@ -10,3 +10,11 @@
 
 	.empty
   		background: gray
+
+	thead
+	  position: fixed
+	  background: white
+	  margin-top: -1px
+
+	th:nth-of-type(1)
+		width: 30px
